<?xml version="1.0" encoding="utf-8"?>

<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context=".LoginFragment">

    <!-- The use of constraintlayout is justified by the use of
     a dimension ratio for the edittext, to not have a width too wide-->

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/loginLayout"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <TextView
            android:id="@+id/titleText"
            style="@style/TextStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="32dp"
            android:text="@string/login"
            android:textAppearance="@style/TextAppearance.AppCompat.Display3"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/textEmail"
            style="@style/TextStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:labelFor="@id/editEmail"
            android:text="@string/email"
            app:layout_constraintStart_toStartOf="@+id/editEmail"
            app:layout_constraintTop_toBottomOf="@+id/titleText" />

        <EditText
            android:id="@+id/editEmail"
            style="@style/TextStyle"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="16dp"
            android:autofillHints=""
            android:ems="10"
            android:hint="@string/email"
            android:inputType="textEmailAddress"
            android:minHeight="48dp"
            app:layout_constraintDimensionRatio="W,7:1"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.497"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textEmail" />

        <TextView
            android:id="@+id/textPassword"
            style="@style/TextStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:text="@string/password"
            app:layout_constraintStart_toStartOf="@+id/editPassword"
            app:layout_constraintTop_toBottomOf="@+id/editEmail" />

        <EditText
            android:id="@+id/editPassword"
            style="@style/TextStyle"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:autofillHints="password"
            android:ems="10"
            android:hint="@string/password"
            android:inputType="textPassword"
            android:minHeight="48dp"
            app:layout_constraintEnd_toEndOf="@+id/editEmail"
            app:layout_constraintHorizontal_bias="0.529"
            app:layout_constraintStart_toStartOf="@+id/editEmail"
            app:layout_constraintTop_toBottomOf="@+id/textPassword" />

        <Button
            android:id="@+id/buttonLogin"
            style="@style/ButtonStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"

            android:text="@string/login"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/editPassword" />

        <Button
            android:id="@+id/buttonRegister"

            style="@style/ButtonStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:text="@string/register"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/buttonLogin" />
    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>